--- a/bookings/templates/bookings/movie_list.html
+++ b/bookings/templates/bookings/movie_list.html
@@ -70,7 +70,12 @@
     .card-title {
         color: white;
     }
-
+    html {
+        background: black !important;
+    }
+    body {
+        background: black !important;
+    }
     /* Movie Text */
     .card-text, p {
         color: rgba(255, 255, 255, 0.8);
