--- a/bookings/templates/bookings/seat_booking.html
+++ b/bookings/templates/bookings/seat_booking.html
@@ -50,6 +50,9 @@
 </div>
 
 <!-- CSS -->
+    html {
+        background: black !important;
+    }
 <style>
     /* Dark Background */
     .seat-container {
@@ -57,8 +60,14 @@
         min-height: 100vh;
         padding-top: 30px;
         padding-bottom: 50px;
+        margin: 0;
     }
-
+    html {
+        background: black !important;
+    }
+    body {
+        background: black !important;
+    }
     /* Movie Screen */
     .screen {
         background: white;
