Added correct Render domain to ALLOWED_HOSTS

--- a/bookings/templates/bookings/home.html
+++ b/bookings/templates/bookings/home.html
@@ -114,12 +114,12 @@
 
     <div class="overlay">
         <h1>Tribe Movies</h1>
-        <a href="{% url 'movie_list' %}" class="btn-movie">🍿 View Movies</a>
+        <a href="{% url 'movie_list' %}" class="btn-movie">View Movies</a>
     </div>
 
 <div class="container my-5">
     <h2 class="text-white">On demand</h2>
-    <h4 class="text-white">Go to Movies to book them</h4>
+    <h4 class="text-white">Visit Movies to book them</h4>
     <div class="movie-slider">
         <img src="https://upload.wikimedia.org/wikipedia/en/1/1c/Godfather_ver1.jpg" alt="The Godfather">
         <img src="https://upload.wikimedia.org/wikipedia/en/1/1c/The_Dark_Knight_%282008_film%29.jpg" alt="The Dark Knight">
